--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>npm</title>
 </head>
+
 <body>
   <!-- Your code goes here -->
+  <nav>
+    <div class="top-left">
+      <a class="heart" href="#">♥︎</a>
+      <span class="acronym">Neophobe Plebeian Mumpsimus</span>
+    </div>
+    <ul class="top-links">
+      <li><a href="#">npm Enterprise</a></li>
+      <li><a href="#">features</a></li>
+      <li><a href="#">pricing</a></li>
+      <li><a href="#">documentation</a></li>
+      <li><a href="#">support</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h1>Build amazing things</h1>
+    <p>npm is the package manager for JavaScript and the world’s largest
+      software registry. Discover packages of reusable code — and assemble
+      them in powerful new ways.</p>
+    <button>Sign up for npm</button>
+  </header>
+
+  <!-- Section 1 -->
+  <section>
+    <img src="./images/collaboration.svg" alt="Collaboration">
+    <h2>npm Orgs is powerful collaboration — for free</h2>
+    <ul>
+      <li>Encourage code discovery and re-use within teams</li>
+      <li>Publish and control access to your own namespace</li>
+      <li>Manage public and private code with the same workflow</li>
+    </ul>
+    <button>Sign up for Orgs</button>
+    <p>or <a href="#">Learn more about Orgs</a></p>
+  </section>
+
+  <!-- Section 2 -->
+  <section>
+    <h3>What is npm?</h3>
+    <p>Use npm to install, share, and distribute code; manage dependencies
+      in your projects; and share & receive feedback with others.</p>
+    <button>Install npm</button>
+  </section>
+
+  <!-- Section 3 -->
+  <section>
+    <h2>What can you make with 475,000 building blocks?</h2>
+    <p>The npm registry hosts almost half a million packages of free, reusable
+      code — the largest software registry in the world.</p>
+    <div>
+      <img src="./images/binoculars.svg" alt="Find Logo">
+      <h3>Find</h3>
+      <p>Libraries like <a href="#">JQuery</a>, <a href="#">Bootstrap</a>,
+        <a href="#">React</a>, and <a href="#">Angular</a>, and components
+        from frameworks such as <a href="#">Ember</a>.</p>
+    </div>
+    <div>
+      <img src="./images/mountain-flag.svg" alt="Dicover Logo">
+      <h3>Discover</h3>
+      <p>Packages for mobile, IoT, front end, back end, robotics… everything
+        you need to start building amazing things.</p>
+    </div>
+    <div>
+      <img src="./images/backpack.svg" alt="Build Logo">
+      <h3>Build</h3>
+      <p>Assemble packages like building blocks to quickly develop awesome new
+        projects.</p>
+    </div>
+  </section>
 </body>
+
 </html>
