--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>npm</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -24,58 +25,72 @@
     </ul>
   </nav>
 
-  <header>
-    <h1>Build amazing things</h1>
-    <p>npm is the package manager for JavaScript and the world’s largest
-      software registry. Discover packages of reusable code — and assemble
-      them in powerful new ways.</p>
-    <button>Sign up for npm</button>
+  <header class="header">
+    <div>
+      <img src="./images/npm-logo.png" alt="NPM Logo">
+      <input class="search-bar" type="search" name="npmsearch" placeholder="find packages">
+      <a href="#">Sign in</a> or <a href="#">log in</a>
+      <img src="./images/bear-logo.png" alt="Bear Logo">
+    </div>
+    <div class="background-header header-container">
+      <div class="col-2">
+        <h1>Build amazing things</h1>
+        <p>npm is the package manager for JavaScript and the world’s largest
+          software registry. Discover packages of reusable code — and assemble
+          them in powerful new ways.</p>
+        <a href="#" class="link-btn">Sign up for npm</a>
+      </div>
+    </div>
   </header>
 
   <!-- Section 1 -->
-  <section>
-    <img src="./images/collaboration.svg" alt="Collaboration">
-    <h2>npm Orgs is powerful collaboration — for free</h2>
-    <ul>
-      <li>Encourage code discovery and re-use within teams</li>
-      <li>Publish and control access to your own namespace</li>
-      <li>Manage public and private code with the same workflow</li>
-    </ul>
-    <button>Sign up for Orgs</button>
-    <p>or <a href="#">Learn more about Orgs</a></p>
+  <section class="collaboration-section">
+    <div class="container">
+      <img class="col col-2 col-middle" src="./images/collaboration.svg" alt="Collaboration">
+      <div class="col col-2">
+        <h2>npm Orgs is powerful collaboration — for free</h2>
+        <ul>
+          <li>Encourage code discovery and re-use within teams</li>
+          <li>Publish and control access to your own namespace</li>
+          <li>Manage public and private code with the same workflow</li>
+        </ul>
+        <a href="#" class="link-btn">Sign up for Orgs</a>
+        <p>or <a href="#">Learn more about Orgs</a></p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
   </section>
 
   <!-- Section 2 -->
   <section>
-    <h3>What is npm?</h3>
-    <p>Use npm to install, share, and distribute code; manage dependencies
-      in your projects; and share & receive feedback with others.</p>
-    <button>Install npm</button>
+    <div class="container">
+      <h3>What is npm?</h3>
+      <p>Use npm to install, share, and distribute code; manage dependencies in
+        your projects; and share & receive feedback with others.</p>
+      <a href="#" class="link-btn">Install npm</a>
+    </div>
   </section>
 
   <!-- Section 3 -->
-  <section>
+  <section class="container">
     <h2>What can you make with 475,000 building blocks?</h2>
-    <p>The npm registry hosts almost half a million packages of free, reusable
-      code — the largest software registry in the world.</p>
-    <div>
+    <p>The npm registry hosts almost half a million packages of free, reusable code — the largest software registry in the world.</p>
+    <div class="col col-3">
       <img src="./images/binoculars.svg" alt="Find Logo">
       <h3>Find</h3>
       <p>Libraries like <a href="#">JQuery</a>, <a href="#">Bootstrap</a>,
-        <a href="#">React</a>, and <a href="#">Angular</a>, and components
-        from frameworks such as <a href="#">Ember</a>.</p>
+        <a href="#">React</a>, and <a href="#">Angular</a>, and components from frameworks such as <a href="#">Ember</a>.</p>
     </div>
-    <div>
+    <div class="col col-3 col-middle">
       <img src="./images/mountain-flag.svg" alt="Dicover Logo">
       <h3>Discover</h3>
-      <p>Packages for mobile, IoT, front end, back end, robotics… everything
-        you need to start building amazing things.</p>
+      <p>Packages for mobile, IoT, front end, back end, robotics… everything you need to start building amazing things.</p>
     </div>
-    <div>
+    <div class="col col-3">
       <img src="./images/backpack.svg" alt="Build Logo">
       <h3>Build</h3>
-      <p>Assemble packages like building blocks to quickly develop awesome new
-        projects.</p>
+      <p>Assemble packages like building blocks to quickly develop awesome new projects.
+      </p>
     </div>
   </section>
 </body>
