Working with styles. 5 blocks defined

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
   <header class="header">
     <div>
-      <img src="./images/npm-logo.png" alt="NPM Logo">
+      <img class="logo-npm" src="./images/npm-logo.png" alt="NPM Logo">
       <input class="search-bar" type="search" name="npmsearch" placeholder="find packages">
       <a href="#">Sign in</a> or <a href="#">log in</a>
-      <img src="./images/bear-logo.png" alt="Bear Logo">
+      <img class="logo-bear" src="./images/bear-logo.png" alt="Bear Logo">
     </div>
-    <div class="background-header header-container">
+    <div class="container">
       <div class="col-2">
         <h1>Build amazing things</h1>
         <p>npm is the package manager for JavaScript and the world’s largest
@@ -49,20 +49,20 @@
       <img class="col col-2 col-middle" src="./images/collaboration.svg" alt="Collaboration">
       <div class="col col-2">
         <h2>npm Orgs is powerful collaboration — for free</h2>
-        <ul>
+        <ul class="ul-indentation">
           <li>Encourage code discovery and re-use within teams</li>
           <li>Publish and control access to your own namespace</li>
           <li>Manage public and private code with the same workflow</li>
         </ul>
         <a href="#" class="link-btn">Sign up for Orgs</a>
-        <p>or <a href="#">Learn more about Orgs</a></p>
+        <p>or, <a class="bold" href="#">Learn more about Orgs</a></p>
       </div>
       <div class="clearfix"></div>
     </div>
   </section>
 
   <!-- Section 2 -->
-  <section>
+  <section class="what-is-npm">
     <div class="container">
       <h3>What is npm?</h3>
       <p>Use npm to install, share, and distribute code; manage dependencies in
@@ -73,23 +73,23 @@
 
   <!-- Section 3 -->
   <section class="container">
-    <h2>What can you make with 475,000 building blocks?</h2>
-    <p>The npm registry hosts almost half a million packages of free, reusable code — the largest software registry in the world.</p>
+    <h2 class="heading">What can you make with 475,000 building blocks?</h2>
+    <p class="paragraph">The npm registry hosts almost half a million packages of free, reusable code — the largest software registry in the world.</p>
     <div class="col col-3">
-      <img src="./images/binoculars.svg" alt="Find Logo">
-      <h3>Find</h3>
-      <p>Libraries like <a href="#">JQuery</a>, <a href="#">Bootstrap</a>,
-        <a href="#">React</a>, and <a href="#">Angular</a>, and components from frameworks such as <a href="#">Ember</a>.</p>
-    </div>
-    <div class="col col-3 col-middle">
-      <img src="./images/mountain-flag.svg" alt="Dicover Logo">
-      <h3>Discover</h3>
-      <p>Packages for mobile, IoT, front end, back end, robotics… everything you need to start building amazing things.</p>
+      <img class="center-img" src="./images/binoculars.svg" alt="Find Logo">
+      <h3 class="heading">Find</h3>
+      <p class="paragraph">Libraries like <a class="red-link" href="#">JQuery</a>, <a class="red-link" href="#">Bootstrap</a>,
+        <a class="red-link"  href="#">React</a>, and <a class="red-link" href="#">Angular</a>, and components from frameworks such as <a class="red-link" href="#">Ember</a>.</p>
     </div>
     <div class="col col-3">
-      <img src="./images/backpack.svg" alt="Build Logo">
-      <h3>Build</h3>
-      <p>Assemble packages like building blocks to quickly develop awesome new projects.
+      <img class="center-img" src="./images/mountain-flag.svg" alt="Dicover Logo">
+      <h3 class="heading">Discover</h3>
+      <p class="paragraph">Packages for mobile, IoT, front end, back end, robotics… everything you need to start building amazing things.</p>
+    </div>
+    <div class="col col-3">
+      <img class="center-img" src="./images/backpack.svg" alt="Build Logo">
+      <h3 class="heading">Build</h3>
+      <p class="paragraph">Assemble packages like building blocks to quickly develop awesome new projects.
       </p>
     </div>
   </section>
