Search bar horizontal align, last block align

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
 
   <header class="header">
     <div>
-      <img class="logo-npm" src="./images/npm-logo.png" alt="NPM Logo">
-      <input class="search-bar" type="search" name="npmsearch" placeholder="find packages">
-      <a href="#">Sign in</a> or <a href="#">log in</a>
-      <img class="logo-bear" src="./images/bear-logo.png" alt="Bear Logo">
+      <div class="horizontal-align">
+        <img class="logo-npm" src="./images/npm-logo.png" alt="NPM Logo"/>
+      </div>
+      <div class="horizontal-align">
+        <input class="search-bar" type="search" name="npmsearch" placeholder="find packages">
+      </div>
+      <div class="horizontal-align sign-in-log-in">
+        <a href="#">Sign in</a> or <a href="#">log in</a>
+      </div>
+      <div class="horizontal-align">
+        <img class="logo-bear" src="./images/bear-logo.png" alt="Bear Logo">
+      </div>
     </div>
+    <div class="clearfix"></div>
     <div class="container">
       <div class="col-2">
         <h1>Build amazing things</h1>
@@ -92,6 +101,7 @@
       <p class="paragraph">Assemble packages like building blocks to quickly develop awesome new projects.
       </p>
     </div>
+    <div class="clearfix"></div>
   </section>
 </body>
 
